# BashISE

./: .gitignore  CHANGELOG.md  README.md  RELEASES.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml
src/bise2/: _legacy.py  _legacy.py.bak.20260116_005729_Z  _legacy.py.bak.20260116_010019_Z  _legacy.py.bak.20260116_010457_Z  _legacy.py.pre_sync.bak.20260116_020007_Z  buildmeta.py  entry.py
src/bise2.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_headless_selftest.py  test_import_smoke.py
