[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bise2"
version = "0.1.2"
description = "BashISE (bise2) - packaged"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
bise2 = "bise2.entry:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
